# RTRC

./: CMakeLists.txt  Readme.md  builtintypecheck.cpp  main.cpp  mainIncludes.h  mainRendering.h  main_utility.h  rtestutility.cpp  rtrc.cpp  test.cpp
include/rtrc/: RDict.h  REventHandler.h  RHybDict.h  RParser.h  RProcs.h  RRand.h  RTRCC.h  SysInfo.h  ThreadCache.h  builtintypecheck.h  compileOptions.h  compiletime.h  dcsynch.h  fileUtility.h  glextensionMgr.h  monitorInfo.h  rexception.h  rfiles.h  rfunctional.h  rglfw.h  rinput.h  rinput_glfw.h  rio.h  rlog.h  rmemory.h  rml.h  rmonitor.h  rmutex.h  rstring.h  rtest.h  rtestutility.h  rthread.h  rtrc.h  rvtypes.h
include/rtrc/collections/: base.h  rcircular_buffer.h
include/rtrc/decs/: dcsynch_decs.h  rglfw_decs.h  rinput_decs.h
include/rtrc/decs/complex_decs/: dcsynch_complex_decs.h
include/rtrc/decs/pre/: rglfw_pre_decs.h
include/rtrc/graphical/: basicVkVideoPipeGroup.h  decoding.h  ravlib.h  rgtext.h  rimage_core.h  ropengl.h  rviewPort_core.h  rvkBits.h  rvulkan.h  rvulkan_circular_resource.h  rvulkan_core.h  rvulkan_image.h  rvulkan_image_pipe.h
include/rtrc/graphical/decs/: basicVkVideoPipeGroup_decs.h  decoding_decs.h  ravlib_decs.h  rimage_core_decs.h  rviewPort_core_decs.h  rvulkan_core_decs.h  rvulkan_decs.h  rvulkan_image_decs.h  rvulkan_image_pipe_decs.h
include/rtrc/graphical/decs/complex_decs/: rvulkan_complex_decs_1.h
rtrc_extras/shaders/: fsh.frag  fsh.spv  vsh.spv  vsh.vert
